test_regress/t/t_fourstate_membersel_sideeffect.out
%Warning-SIDEEFFECT: t/t_fourstate_membersel_sideeffect.v:21:9: Expression side effect may be mishandled
                                                              : ... Suggest use a temporary variable in place of this expression
   21 |     foo.fooo().foo = 2;
      |         ^~~~
                     ... For warning description see https://verilator.org/warn/SIDEEFFECT?v=latest
                     ... Use "/* verilator lint_off SIDEEFFECT */" and lint_on around source to disable this message.
%Warning-SIDEEFFECT: t/t_fourstate_membersel_sideeffect.v:22:13: Expression side effect may be mishandled
                                                               : ... note: In instance 't'
                                                               : ... Suggest use a temporary variable in place of this expression
   22 |     if (foo.fooo().foo !== 16'b0000000000000010) $stop;
      |             ^~~~
%Error: Exiting due to
